# GDEL

./: .ccls  .gitignore  CMakeLists.txt  GDEL.code-workspace  grammar.txt  main.cpp
Debug/: CMakeCache.txt  GDEL-DEBUG  Makefile  cmake_install.cmake  compile_commands.json
Parser/core/: Exception.hpp  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
Parser/elements/ignore/: Ignore.cpp  Ignore.h
Parser/elements/literal/: Literal.cpp  Literal.h
Parser/elements/statement/: Statement.cpp  Statement.h
Parser/elements/statement/expression/: BlockStatement.cpp  BlockStatement.h  Expression.cpp  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h
Parser/include/: AdditiveExpression.h  AssigmentExpression.h  BlockStatement.h  CallExpression.h  Declarations.h  Defines.h  EqualityExpression.h  Exception.hpp  Expression.h  ExpressionStatement.h  ForLoopStatement.h  FunctionDeclaration.h  FunctionStatement.h  IStatement.h  IfStatement.h  ImportStatement.h  Literal.h  LogicalAndExpression.h  LogicalOrExpression.h  LoopStatement.h  MemberExpression.h  MultiplicativeExpression.h  ParenthesisExpression.h  Parser.h  Parser.hpp  PrimaryExpression.h  RangeExpression.h  RelationalExpression.h  Statement.h  StructStatement.h  TokenStripper.h  TokenStripper.hpp  Tokenizer.h  UnaryExpression.h  VariableStatement.h
Parser/src/: AdditiveExpression.cpp  AssigmentExpression.cpp  BlockStatement.cpp  CallExpression.cpp  Defines.cpp  EqualityExpression.cpp  Expression.cpp  ExpressionStatement.cpp  ForLoopStatement.cpp  FunctionDeclaration.cpp  FunctionStatement.cpp  IStatement.cpp  IfStatement.cpp  ImportStatement.cpp  Literal.cpp  LogicalAndExpression.cpp  LogicalOrExpression.cpp  LoopStatement.cpp  MemberExpression.cpp  MultiplicativeExpression.cpp  ParenthesisExpression.cpp  Parser.cpp  PrimaryExpression.cpp  RangeExpression.cpp  RelationalExpression.cpp  Statement.cpp  StructStatement.cpp  TokenStripper.cpp  Tokenizer.cpp  UnaryExpression.cpp  VariableStatement.cpp
Parser/tests/: AssigmentTests.hpp  BinaryOpsTest.hpp  BlockTest.hpp  FunctionTests.hpp  IfTests.hpp  ImportTests.hpp  LoopTests.hpp  NumbersTest.hpp  ParserTests.hpp  RangeTests.hpp  StringTests.hpp  StructTests.hpp  VariablesTest.hpp
Vm/include/: common.h  compiler.h  data.h  debug.h  hashTable.h  memBlock.h  memory.h  register.h  tokenizer.h  vm.h
Vm/src/: compiler.cpp  data.cpp  debug.cpp  hashTable.cpp  memBlock.cpp  memory.cpp  register.cpp  tokenizer.cpp  vm.cpp
dataStructs/: TrieDS.hpp
releases/debug/: GDEL-DEBUG
releases/release/: GDEL-RELEASE
